--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: GeneSix
-email: genesix@somedomain.com
+email: mrm@me.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is a tampletop roleplaying game aiming to capture the je ne sais quoi of Genesys.
+  This is a tabletop roleplaying game aiming to capture the je ne sais quoi of a Generic TTPGS using narrative Rice.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://genesixrpg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: twitter_is_ass_cancer
-github_username:  genesixrpg
+url: "https://genesixttrpg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  genesixttrpg
 
 # Build settings
 #theme: minima
