--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: GeneSix
-email: mrm@me.com
+email: mrm@duck.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a tabletop roleplaying game aiming to capture the je ne sais quoi of Genesys™ but with some modern sensibilities.
 baseurl: "" # the subpath of your site, e.g. /blog
